# rust_aws_api

./: Cargo.toml  LICENSE  README.md  myfile.txt  newfile.txt  rust-role.json
src/: main.rs
