[package]
name = "fileupload_ec2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-secretsmanager = "0.24.0"
aws-types = "0.54.1"
rusoto_core = "0.48.0"
rusoto_secretsmanager = "0.48.0"
rusoto_s3 = "0.48.0"
ssh2 = "0.9.4"
serde_json = "1.0.93"
openssl = { version = "=0.10.45", features = ["vendored"] }
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.7"
