[package]
name = "fileupload_ec2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-secretsmanager = "0.24.0"
aws-sdk-s3 = "0.24.0"
aws-types = "0.54.1"
lambda_http = "0.7"
ssh2 = "0.9.4"
serde_json = "1.0.93"
openssl = { version = "=0.10.45", features = ["vendored"] }
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.12"
lambda_runtime = "0.7"
